--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,8 +1,8 @@
-.text-center
-  = image_tag @post.image.url(:medium)
-  = render 'form'
-
+- if @post.user.id == current_user.id
   .text-center.edit-links
-    = link_to "Delete Post", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" }
+    = link_to "Cancel", posts_path
     |
-    = link_to "cancel", posts_path
+    = link_to "Edit Post", edit_post_path(@post)
+- else
+  .text-center.edit-links
+    =link_to "Cancel", posts_path
